--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Make Cookies</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
     <h1 id="cookie-counter">0</h1>
@@ -31,7 +32,16 @@
     <button id="buy-facility">Buy for <span id="facility-price">100000</span></button>
     <p>Level: <span id="facility-level">0</span></p>
 
+    <!--Custom Shop Item-->
+    <hr>
+    <p>Restart</p>
+    <button id="restart">Start all over!</button>
+    
+
+
     <script src="./scripts.js"></script>
+
+    
 
 </body>
 </html>
